@@ -1,3 +1,5 @@
+[B]1.0.2:[/B]
+- přidaná možnost volby kvality videa, default: nejlepší 
 [B]1.0.1:[/B]
 - přidaná podpora přehrávání a stahování pohádek rozdělených na více videí
 [B]1.0.0:[/B]
